<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16.0dip"
    android:weightSum="1">

    <TextView
        android:id="@+id/telegram1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="E-mail:" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messagesubject">

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:hint="@string/messagetext"
        android:inputType="textMultiLine"
        android:lines="5"
        android:layout_weight="0.02" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcorner"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textStyle="normal" />

</LinearLayout>