<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingBottom="20.0dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                tools:ignore="UselessParent">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150.0dp"
                        android:layout_height="150.0dp"
                        android:layout_gravity="center"
                        android:contentDescription=""
                        android:src="@drawable/logo_bg_transulent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="110.0dp"
                        android:layout_height="110.0dp"
                        android:layout_gravity="center"
                        android:src="@drawable/logo_bg"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/title_logo"
                        tools:ignore="ContentDescription" />
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textAppearance="@style/TextAppearance.Material.Small" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/v"
                    android:textAppearance="@style/TextAppearance.Material.Small"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10.0dip"
            android:text="@string/featuresapp"
            android:textColor="#46757F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16.0dip"
            android:text="@string/informationtext1"
            android:textColor="#46757F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16.0dip"
            android:text="@string/informationtext2"
            android:textColor="#46757F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16.0dip"
            android:text="@string/informationtext3"
            android:textColor="#46757F"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
